feat: Added the about us page - Added the about content and references - Added the translation for all the about us content - Added the link to the about page to login - Made the about page mobile responsive

--- a/frontEndCaptini/src/app/Auth/login/login.component.html
+++ b/frontEndCaptini/src/app/Auth/login/login.component.html
@@ -39,10 +39,11 @@
         </form>
         <div class="text-center">
             <div>
-                <a [routerLink]="" (click)="switchLang( 'en')"><img src="../../../assets/image/flag/en.png" alt="England" class="pe-2"></a>
-                <a [routerLink]="" (click)="switchLang( 'icl')"><img src="../../../assets/image/flag/icl.png" alt="Iceland"></a>
+                <a [routerLink]="" (click)="switchLang('en')"><img src="../../../assets/image/flag/en.png" alt="England" class="pe-2"></a>
+                <a [routerLink]="" (click)="switchLang('icl')"><img src="../../../assets/image/flag/icl.png" alt="Iceland"></a>
             </div>
             <hr>
+            <a class="text-muted text-center" routerLink="/about-us">{{ 'header.about' | translate }}</a>
             <p class="text-muted text-center">CAPTinI &copy; 2024</p>
         </div>
     </div>
