--- a/frontEndCaptini/src/app/modules/general/components/header/header.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/header/header.component.html
@@ -9,7 +9,7 @@
                     <li class="nav-item"><a class="nav-link" routerLink="/">{{'header.leaderBoard' | translate}}</a></li>
                     <!--<li class="nav-item"><a class="nav-link" routerLink="/review">{{'header.review' | translate}}</a></li>-->
                     <!--<li class="nav-item"><a class="nav-link" routerLink="/community">{{'header.community' | translate}}</a></li>-->
-                    <li class="nav-item"><a class="nav-link" routerLink="/references">{{'header.reference' | translate}}</a></li>
+                    <li class="nav-item"><a class="nav-link" routerLink="/about">{{'header.about' | translate}}</a></li>
                 </ul>
             </div>
             <div class="float-end d-inline-flex ms-auto">
