--- a/frontEndCaptini/src/app/modules/general/components/reference/reference.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/reference/reference.component.html
@@ -55,8 +55,18 @@
                                 <aside class="ms-2">
                                     <b>{{'reference.published-articles' | translate}} </b>
                                     <div class="mt-3">
-                                        <div class="mt-3"><a href="https://research-publishing.net/publication/chapters/978-2-38372-015-7/1480.pdf">Computer-assisted pronunciation training in Icelandic (CAPTinI): developing a method for quantifying mispronunciation in L2 speech
-                                            Orthography-based pronunciation scoring for better CAPT feedback </a></div>
+                                        <div class="mt-3">
+                                            <a href="https://ieeexplore.ieee.org/document/10095033">Richter, Caitlin, and Jón Guðnason. "Relative dynamic time warping comparison for pronunciation errors." ICASSP 2023-2023 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP). IEEE, 2023.
+                                            </a>
+                                        </div>
+                                        <div class="mt-3">
+                                            <a href="https://books.google.is/books?hl=en&lr=&id=2AahEAAAQBAJ&oi=fnd&pg=PA334&dq=Computerassisted+pronunciation+training+in+Icelandic+(CAPTinI):+developing+a+method+for+quantifying+mispronunciation+in+L2+speech.&ots=DTL72rx63U&sig=N4mjsHHHBSoBSCxUap6BmIfNDTo&redir_esc=y#v=onepage&q=Computerassisted%20pronunciation%20training%20in%20Icelandic%20(CAPTinI)%3A%20developing%20a%20method%20for%20quantifying%20mispronunciation%20in%20L2%20speech.&f=false">Richter, Catlin, et al. "Computerassisted pronunciation training in Icelandic (CAPTinI): developing a method for quantifying mispronunciation in L2 speech." Intelligent CALL, granular systems and learner data: short papers from EUROCALL 2022 (2022): 334.  
+                                            </a>
+                                        </div>
+                                        <div class="mt-3">
+                                            <a href="../../../../../assets/pdf/richter23b_interspeech.pdf">Richter, C., Pálsson, R., O'Brien, L., Friðriksdóttir, K., Bédi, B., Magnúsdóttir, E.H., Guðnason, J. (2023) "Orthography-based Pronunciation Scoring for Better CAPT Feedback. " Proc. INTERSPEECH 2023, 1004-1008, doi: 10.21437/Interspeech.2023-2577   
+                                            </a>
+                                        </div>
                                     </div>
                                 </aside>
                             </div>
@@ -99,7 +109,6 @@
                             </div>
                         </div>
                     </li>
-
                     <li class="list-group-item community-feedback">
                         <div class="item-content">
                             <div class="item-content">
@@ -133,6 +142,20 @@
                                             [4] File:IPA-euler-manners-features.svg. (2022, May 31). In Wikipedia. 
                                             <a href="https://en.wikipedia.org/wiki/File:IPA-euler-manners-features.svg">https://en.wikipedia.org/wiki/File:IPA-euler-manners-features.svg</a> 
                                             (retrieved 05.03.2024). Creative Commons Attribution-Share Alike 4.0 International. Modified to black and white, added white background and added a reference mark.
+                                        </div>
+                                    </div>
+                                </aside>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="list-group-item community-feedback">
+                        <div class="item-content">
+                            <div class="item-content">
+                                <aside class="ms-2">
+                                    <b>{{'reference.collaboration' | translate}} </b> 
+                                    <div class="mt-3">
+                                        <div class="mt-3">
+                                            {{'reference.collaboration-content' | translate}}
                                         </div>
                                     </div>
                                 </aside>
