--- a/frontEndCaptini/src/app/modules/general/components/reference/reference.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/reference/reference.component.html
@@ -56,15 +56,15 @@
                                     <b>{{'reference.published-articles' | translate}} </b>
                                     <div class="mt-3">
                                         <div class="mt-3">
-                                            <a href="https://ieeexplore.ieee.org/document/10095033">Richter, Caitlin, and Jón Guðnason. "Relative dynamic time warping comparison for pronunciation errors." ICASSP 2023-2023 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP). IEEE, 2023.
+                                            <a href="../../../../../assets/pdf/richter_gudnason_2023_relative_dtw.pdf" target="_blank">Richter, Caitlin, and Jón Guðnason. "Relative dynamic time warping comparison for pronunciation errors." ICASSP 2023-2023 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP). IEEE, 2023.
                                             </a>
                                         </div>
                                         <div class="mt-3">
-                                            <a href="https://books.google.is/books?hl=en&lr=&id=2AahEAAAQBAJ&oi=fnd&pg=PA334&dq=Computerassisted+pronunciation+training+in+Icelandic+(CAPTinI):+developing+a+method+for+quantifying+mispronunciation+in+L2+speech.&ots=DTL72rx63U&sig=N4mjsHHHBSoBSCxUap6BmIfNDTo&redir_esc=y#v=onepage&q=Computerassisted%20pronunciation%20training%20in%20Icelandic%20(CAPTinI)%3A%20developing%20a%20method%20for%20quantifying%20mispronunciation%20in%20L2%20speech.&f=false">Richter, Catlin, et al. "Computerassisted pronunciation training in Icelandic (CAPTinI): developing a method for quantifying mispronunciation in L2 speech." Intelligent CALL, granular systems and learner data: short papers from EUROCALL 2022 (2022): 334.  
+                                            <a href="https://books.google.is/books?hl=en&lr=&id=2AahEAAAQBAJ&oi=fnd&pg=PA334&dq=Computerassisted+pronunciation+training+in+Icelandic+(CAPTinI):+developing+a+method+for+quantifying+mispronunciation+in+L2+speech.&ots=DTL72rx63U&sig=N4mjsHHHBSoBSCxUap6BmIfNDTo&redir_esc=y#v=onepage&q=Computerassisted%20pronunciation%20training%20in%20Icelandic%20(CAPTinI)%3A%20developing%20a%20method%20for%20quantifying%20mispronunciation%20in%20L2%20speech.&f=false" target="_blank">Richter, Catlin, et al. "Computerassisted pronunciation training in Icelandic (CAPTinI): developing a method for quantifying mispronunciation in L2 speech." Intelligent CALL, granular systems and learner data: short papers from EUROCALL 2022 (2022): 334.  
                                             </a>
                                         </div>
                                         <div class="mt-3">
-                                            <a href="../../../../../assets/pdf/richter23b_interspeech.pdf">Richter, C., Pálsson, R., O'Brien, L., Friðriksdóttir, K., Bédi, B., Magnúsdóttir, E.H., Guðnason, J. (2023) "Orthography-based Pronunciation Scoring for Better CAPT Feedback. " Proc. INTERSPEECH 2023, 1004-1008, doi: 10.21437/Interspeech.2023-2577   
+                                            <a href="../../../../../assets/pdf/richter23b_interspeech.pdf" target="_blank">Richter, C., Pálsson, R., O'Brien, L., Friðriksdóttir, K., Bédi, B., Magnúsdóttir, E.H., Guðnason, J. (2023) "Orthography-based Pronunciation Scoring for Better CAPT Feedback. " Proc. INTERSPEECH 2023, 1004-1008, doi: 10.21437/Interspeech.2023-2577   
                                             </a>
                                         </div>
                                     </div>
@@ -76,7 +76,7 @@
                         <div class="item-content">
                             <div class="item-content d-flex d-inline-flex">
                                 <aside class="ms-2">
-                                    <b>{{'reference.logo-design' | translate}}</b><a href="https://icelandiconline.com/"><b>Icelandic Online</b></a>
+                                    <b>{{'reference.logo-design' | translate}}</b><a href="https://icelandiconline.com/" target="_blank"><b>Icelandic Online</b></a>
                                 </aside>
                             </div>
                         </div>
@@ -85,8 +85,7 @@
                         <div class="item-content">
                             <div class="item-content d-flex d-inline-flex">
                                 <aside class="ms-2">
-                                    <b>{{'reference.reading-exercice' | translate}} </b><a href="https://icelandiconline.com/"><b>Icelandic Online</b></a>
-                                    
+                                    <b>{{'reference.reading-exercice' | translate}} </b><a href="https://icelandiconline.com/" target="_blank"><b>Icelandic Online</b></a> 
                                 </aside>
                             </div>
                         </div>
@@ -95,15 +94,15 @@
                         <div class="item-content">
                             <div class="item-content d-flex d-inline-flex">
                                 <aside class="ms-2">
-                                    <b>{{'reference.pedagoy' | translate}} </b><a href="https://icelandiconline.com/"><b>Icelandic Online</b></a>
+                                    <b>{{'reference.pedagoy' | translate}} </b><a href="https://icelandiconline.com/" target="_blank"><b>Icelandic Online</b></a>
                                     <div class="mt-3">
-                                        <div class="mt-3"><a href="https://millimala.hi.is/wp-content/uploads/2022/01/2021-2-Birna-Arnbjo%CC%88rnsdo%CC%81ttir.pdf">[1] Tölvutengd tungumálakennsla: Kennslufræði, árangur og möguleikar Icelandic Online námskerfisins</a></div>
+                                        <div class="mt-3"><a href="https://millimala.hi.is/wp-content/uploads/2022/01/2021-2-Birna-Arnbjo%CC%88rnsdo%CC%81ttir.pdf" target="_blank">[1] Tölvutengd tungumálakennsla: Kennslufræði, árangur og möguleikar Icelandic Online námskerfisins</a></div>
                                     </div>
                                     <div class="mt-3">
                                         <div class="mt-3">[2] Arnbjörnsdóttir, B. (2004). Teaching morphologically complex languages online: Theoretical questions and practical answers. In P. J. Henrichsen (Ed.), CALL for the Nordic languages. Tools and methods for computer assisted language learning (pp. 79–94). Copenhagen: Samfundslitteratur.</div>
                                     </div>
                                     <div class="mt-3">
-                                        <div class="mt-3"><a href="https://www.cambridge.org/core/journals/recall/article/abs/effect-of-contentrelated-and-external-factors-on-student-retention-in-lmoocs/28BD10D22489BCB3BBFEC423306C33E5">[3] The effect of content-related and external factors on student retention in LMOOCs</a></div>
+                                        <div class="mt-3"><a href="https://www.cambridge.org/core/journals/recall/article/abs/effect-of-contentrelated-and-external-factors-on-student-retention-in-lmoocs/28BD10D22489BCB3BBFEC423306C33E5" target="_blank">[3] The effect of content-related and external factors on student retention in LMOOCs</a></div>
                                     </div>
                                 </aside>
                             </div>
@@ -117,30 +116,30 @@
                                     <div class="mt-3">
                                         <div class="mt-3">
                                             [1] Sérhljóð. (2023, September 16). In Wikipedia. 
-                                            <a href="https://is.wikipedia.org/wiki/Sérhljóð">https://is.wikipedia.org/wiki/Sérhljóð</a> 
+                                            <a href="https://is.wikipedia.org/wiki/Sérhljóð" target="_blank">https://is.wikipedia.org/wiki/Sérhljóð</a> 
                                             (retrieved 12.02.2024). CC BY-SA 3.0 unported. Modified to black and white and added reference marks.
                                         </div>
                                     </div>
                                     <div class="mt-3">
                                         <div class="mt-3">
                                             [2] Samhljóð. (2022, May 11). In Wikipedia. 
-                                            <a href="https://is.wikipedia.org/wiki/Samhljóð">https://is.wikipedia.org/wiki/Samhljóð</a> 
+                                            <a href="https://is.wikipedia.org/wiki/Samhljóð" target="_blank">https://is.wikipedia.org/wiki/Samhljóð</a> 
                                             (retrieved 12.02.2024). CC BY-SA 3.0 unported. Modified to black and white and added reference marks.
                                         </div>
                                     </div>
                                     <div class="mt-3">
                                         <div class="mt-3">
                                             [3] Idealistic tongue positions of cardinal front vowels with highest point indicated. (2008, February 11). In Wikipedia.
-                                            <a style="display: block; word-break: break-all;" href="https://en.wikipedia.org/wiki/Vowel#/media/File:Cardinal_vowel_tongue_position-front.svg">https://en.wikipedia.org/wiki/Vowel#/media/File:Cardinal_vowel_tongue_position-front.svg</a> 
+                                            <a style="display: block; word-break: break-all;" href="https://en.wikipedia.org/wiki/Vowel#/media/File:Cardinal_vowel_tongue_position-front.svg" target="_blank">https://en.wikipedia.org/wiki/Vowel#/media/File:Cardinal_vowel_tongue_position-front.svg</a> 
                                             (retrieved 05.03.2024). CC BY-SA 4.0,
-                                            <a href="https://commons.wikimedia.org/w/index.php?curid=3539944">https://commons.wikimedia.org/w/index.php?curid=3539944 </a> 
+                                            <a href="https://commons.wikimedia.org/w/index.php?curid=3539944" target="_blank">https://commons.wikimedia.org/w/index.php?curid=3539944 </a> 
                                             Modified to black and white and added a reference 
                                         </div>
                                     </div>
                                     <div class="mt-3">
                                         <div class="mt-3">
                                             [4] File:IPA-euler-manners-features.svg. (2022, May 31). In Wikipedia. 
-                                            <a href="https://en.wikipedia.org/wiki/File:IPA-euler-manners-features.svg">https://en.wikipedia.org/wiki/File:IPA-euler-manners-features.svg</a> 
+                                            <a href="https://en.wikipedia.org/wiki/File:IPA-euler-manners-features.svg" target="_blank">https://en.wikipedia.org/wiki/File:IPA-euler-manners-features.svg</a> 
                                             (retrieved 05.03.2024). Creative Commons Attribution-Share Alike 4.0 International. Modified to black and white, added white background and added a reference mark.
                                         </div>
                                     </div>
